# VCC

./: .gitignore  CMakeLists.txt  README.md
ebpf/: vcc_ebpf.h
include/vcc/: languages.c  languages.h  targets.c  targets.h  version.h
lib/verolibc/: vero_malloc.c  vero_math.c  vero_stdio.c  vero_stdlib.c  vero_string.c  verolibc.c  verolibc.h
lib/verolibc/arch/x86_64/: syscall.h
tests/c/: arrays.c  fibonacci.c  hello.c
tests/cpp/: hello.cpp
tests/ebpf/: hello_ebpf.c
tests/go/: hello.go
tests/pascal/: hello.pas
tests/rust/: hello.rs
vcc/: main.c
vcp/: vcp.c  vcp.h  vcp_main.c
vuamc/: vuamc.c  vuamc.h
vuca/: vuca.c  vuca.h
vuca/asm_frontend/: asm_frontend.c
vuca/c_frontend/: ast.c  ast.h  c_frontend.c  codegen.c  codegen.h  lexer.c  lexer.h  parser.c  parser.h
vuca/cpp_frontend/: cpp_frontend.c
vuca/go_frontend/: go_frontend.c
vuca/pascal_frontend/: pascal_frontend.c
vuca/rust_frontend/: rust_frontend.c
vumc/: vumc.c  vumc.h
